--- a/main.html
+++ b/main.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OTP Verification</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>OTP Verification</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h2 id="verification_heading">Verify Your Account</h2>
-        <p id="verification_subtext">Enter the 6-digit OTP sent to your registered mobile number.</p>
-
-        <div class="code-container">
-            <input type="text" class="code" maxlength="1">
-            <input type="text" class="code" maxlength="1">
-            <input type="text" class="code" maxlength="1">
-            <input type="text" class="code" maxlength="1">
-            <input type="text" class="code" maxlength="1">
-            <input type="text" class="code" maxlength="1">
-        </div>
-
-        <button id="verifyBtn">Verify OTP</button>
+  <div class="container">
+    <h1 id="verification_heading">Verify Your Account</h1>
+    <p id="verification_subtext">
+      We emailed you the six-digit code to cool_guy@email.com. Enter the code below to confirm your email address.
+    </p>
+    <div class="code-container">
+      <input type="text" class="code" id="code-1" maxlength="1" placeholder="0" autofocus>
+      <input type="text" class="code" id="code-2" maxlength="1" placeholder="0">
+      <input type="text" class="code" id="code-3" maxlength="1" placeholder="0">
+      <input type="text" class="code" id="code-4" maxlength="1" placeholder="0">
+      <input type="text" class="code" id="code-5" maxlength="1" placeholder="0">
+      <input type="text" class="code" id="code-6" maxlength="1" placeholder="0">
     </div>
+  </div>
 
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
