--- a/main.html
+++ b/main.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OTP Verification</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>OTP Verification</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h2 id="verification_heading">Verify Your Account</h2>
-        <p id="verification_subtext">We emailed you the six digit code to your email address. <br> Enter the code below to confirm your email address.</p>
-        
-        <div class="code-container">
-            <input type="number" class="code" placeholder="0" min="0" max="9" required>
-            <input type="number" class="code" placeholder="0" min="0" max="9" required>
-            <input type="number" class="code" placeholder="0" min="0" max="9" required>
-            <input type="number" class="code" placeholder="0" min="0" max="9" required>
-            <input type="number" class="code" placeholder="0" min="0" max="9" required>
-            <input type="number" class="code" placeholder="0" min="0" max="9" required>
-        </div>
 
-        <small>If you didn't receive a code, <strong>Resend</strong></small>
-    </div>
+  <!-- Heading -->
+  <h1 id="verification_heading">Verify Your Account</h1>
 
-    <script src="script.js"></script>
+  <!-- Subheading -->
+  <p id="verification_subtext">
+    We have sent a 6-digit verification code to your registered mobile number.
+    Please enter the code below to verify your account.
+  </p>
+
+  <!-- OTP Container -->
+  <div class="code-container">
+    <input type="text" maxlength="1" class="code">
+    <input type="text" maxlength="1" class="code">
+    <input type="text" maxlength="1" class="code">
+    <input type="text" maxlength="1" class="code">
+    <input type="text" maxlength="1" class="code">
+    <input type="text" maxlength="1" class="code">
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
