--- a/main.html
+++ b/main.html
@@ -9,24 +9,37 @@
 <body>
 
   <!-- Heading -->
-  <h1 id="verification_heading">Verify Your Account</h1>
+  <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>OTP Entry</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 
-  <!-- Subheading -->
-  <p id="verification_subtext">
-    We have sent a 6-digit verification code to your registered mobile number.
-    Please enter the code below to verify your account.
-  </p>
+    <div class="main-container">
+        <h1 id="verification_heading">Verify Your Account</h1>
+        
+        <p id="verification_subtext">
+            We have sent a 6-digit verification code to your registered mobile number. 
+            Please enter the code below to verify your account.
+        </p>
 
-  <!-- OTP Container -->
-  <div class="code-container">
-    <input type="text" maxlength="1" class="code">
-    <input type="text" maxlength="1" class="code">
-    <input type="text" maxlength="1" class="code">
-    <input type="text" maxlength="1" class="code">
-    <input type="text" maxlength="1" class="code">
-    <input type="text" maxlength="1" class="code">
-  </div>
+        <div class="code-container">
+            <input type="number" class="code" min="0" max="9" placeholder="0" required>
+            <input type="number" class="code" min="0" max="9" placeholder="0" required>
+            <input type="number" class="code" min="0" max="9" placeholder="0" required>
+            <input type="number" class="code" min="0" max="9" placeholder="0" required>
+            <input type="number" class="code" min="0" max="9" placeholder="0" required>
+            <input type="number" class="code" min="0" max="9" placeholder="0" required>
+        </div>
+    </div>
 
+    <script src="script.js"></script>
+</body>
+</html>
   <script src="script.js"></script>
 </body>
 </html>
